welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: '=' expected but ')' found.
def positionFinale()):Boolean = {
                    ^ColumnByColumn:39: error: illegal start of simple expression
}
^